# mismi

./: .gitignore  .gitmodules  .projectile  Makefile  README.md  Setup.hs  boris-git.toml  boris.toml  mismi.cabal  mismi.submodules
mismi-autoscaling/: README.md  ambiata-mismi-autoscaling.cabal  ambiata-mismi-autoscaling.lock-7.10.2  ambiata-mismi-autoscaling.lock-8.0.2  master.toml  mismi-autoscaling.cabal  mismi-autoscaling.lock-7.10.2  mismi-autoscaling.lock-8.0.1
mismi-autoscaling-core/: ambiata-mismi-autoscaling-core.cabal  master.toml  mismi-autoscaling-core.cabal  mismi-autoscaling-core.lock-7.10.2
mismi-autoscaling-core/test/: ambiata-mismi-autoscaling-core-test.cabal  mismi-autoscaling-core-test.cabal  mismi-autoscaling-core-test.lock-7.10.2  test.hs
mismi-autoscaling/src/Mismi/: Autoscaling.hs
mismi-autoscaling/src/Mismi/Autoscaling/: Amazonka.hs  Commands.hs  Data.hs  Error.hs
mismi-autoscaling/test/: ambiata-mismi-autoscaling-test.cabal  ambiata-mismi-autoscaling-test.submodules  mismi-autoscaling-test.cabal  mismi-autoscaling-test.lock-7.10.2  test-io.hs  test.hs
mismi-cli/: ambiata-mismi-cli.cabal  master.toml  mismi-cli.cabal  mismi-cli.lock-7.10.2  mismi-cli.lock-7.8.4  mismi-cli.lock-8.0.1
mismi-cli/main/: s3.hs
mismi-cli/test/cli/exit/: run
mismi-cli/test/cli/sync/: run
mismi-cli/test/cli/usage/: expected  run
mismi-cli/test/cli/work/: run
mismi-cloudwatch/: ambiata-mismi-cloudwatch.cabal  ambiata-mismi-cloudwatch.lock-7.10.2  mismi-cloudwatch.cabal  mismi-cloudwatch.lock-7.10.2  mismi-cloudwatch.lock-8.0.1  mismi-cloudwatch.submodules
mismi-cloudwatch/src/Mismi/: Cloudwatch.hs
mismi-cloudwatch/src/Mismi/Cloudwatch/: Amazonka.hs
mismi-cloudwatch/test/: ambiata-mismi-cloudwatch-test.cabal  mismi-cloudwatch-test.submodules
mismi-core/: ambiata-mismi-core.cabal  ambiata-mismi-core.lock-7.10.2  ambiata-mismi-core.lock-8.0.2  master.toml  mismi-core.cabal  mismi-core.lock-7.10.2  mismi-core.lock-8.0.1  mismi-core.submodules
mismi-core/src/: Mismi.hs
mismi-core/src/Mismi/: Amazonka.hs  Control.hs  Data.hs  Environment.hs  Stats.hs
mismi-core/src/Mismi/Control/: Amazonka.hs
mismi-core/test/: ambiata-mismi-core-test.cabal  mismi-core-test.cabal  mismi-core-test.lock-7.10.2  test.hs
mismi-core/test/Test/: Mismi.hs
mismi-core/test/Test/Mismi/: Arbitrary.hs  Control.hs  Data.hs
mismi-dynamodb/: ambiata-mismi-dynamodb.cabal  master.toml  mismi-dynamodb.cabal  mismi-dynamodb.lock-7.10.2
mismi-dynamodb/src/Mismi/DynamoDB/: Amazonka.hs  Control.hs
mismi-ec2/: ambiata-mismi-ec2.cabal  ambiata-mismi-ec2.lock-7.10.2  ambiata-mismi-ec2.lock-8.0.2  master.toml  mismi-ec2.cabal  mismi-ec2.lock-7.10.2  mismi-ec2.lock-8.0.1  mismi-ec2.submodules
mismi-ec2-core/: .gitignore  ambiata-mismi-ec2-core.cabal  ambiata-mismi-ec2-core.lock-8.0.2  master.toml  mismi-ec2-core.cabal  mismi-ec2-core.lock-7.10.2  mismi-ec2-core.lock-8.0.1
mismi-ec2-core/scripts/: gen-ec2-core.sh  gen-ec2.sh  gen.sh  generate-storage.py
mismi-ec2-core/test/: ambiata-mismi-ec2-core-test.cabal  mismi-ec2-core-test.cabal  test.hs
mismi-ec2/main/: s3.hs
mismi-ec2/src/Mismi/: EC2.hs
mismi-ec2/src/Mismi/EC2/: Amazonka.hs  Commands.hs  Data.hs  Metadata.hs
mismi-ec2/test/: mismi-ec2-test.cabal  mismi-ec2-test.submodules  test-io.hs  test.hs
mismi-emr/: ambiata-mismi-emr.cabal  master.toml  mismi-emr.cabal  mismi-emr.lock-7.10.2  mismi-emr.lock-8.0.1
mismi-emr/src/Mismi/: EMR.hs
mismi-emr/test/: ambiata-mismi-emr-test.cabal  mismi-emr-test.submodules
mismi-iam/: ambiata-mismi-iam.cabal  ambiata-mismi-iam.lock-8.0.2  master.toml  mismi-iam.cabal  mismi-iam.lock-7.10.2  mismi-iam.lock-8.0.1  mismi-iam.submodules
mismi-iam-core/: ambiata-mismi-iam-core.cabal  master.toml  mismi-iam-core.cabal  mismi-iam-core.lock-7.10.2  mismi-iam-core.lock-8.0.1
mismi-iam/src/Mismi/: IAM.hs
mismi-iam/src/Mismi/IAM/: Data.hs  (+2 more)
mismi-iam/test/: ambiata-mismi-iam-test.cabal  mismi-iam-test.cabal  mismi-iam-test.submodules  test-io.hs
mismi-kernel/test/: ambiata-mismi-kernel-test.cabal  mismi-kernel-test.cabal  test.hs
mismi-openssl/: ambiata-mismi-openssl.cabal  ambiata-mismi-openssl.lock-7.10.2  master.toml  mismi-openssl.cabal  mismi-openssl.lock-7.10.2  mismi-openssl.lock-7.8.4  mismi-openssl.lock-8.0.1
mismi-openssl/src/Mismi/: OpenSSL.hs
mismi-rds-core/: ambiata-mismi-rds-core.cabal  master.toml  mismi-rds-core.cabal  mismi-rds-core.lock-7.10.2
mismi-s3/: _s3.zsh  ambiata-mismi-s3.cabal  ambiata-mismi-s3.lock-7.10.2  ambiata-mismi-s3.lock-8.0.2  master.toml  mismi-s3.cabal  mismi-s3.lock-7.10.2  mismi-s3.lock-8.0.1  mismi-s3.submodules  s3-completion.bash
mismi-s3-core/: ambiata-mismi-s3-core.cabal  ambiata-mismi-s3-core.lock-8.0.2  mismi-s3-core.cabal  mismi-s3-core.lock-7.10.2  mismi-s3-core.lock-8.0.1
mismi-s3-core/test/: ambiata-mismi-s3-core-test.cabal  mismi-s3-core-test.cabal  test.hs
mismi-s3/doc/: benchmarks.md
mismi-s3/main/: s3.hs
mismi-s3/src/Mismi/: S3.hs
mismi-s3/test/: ambiata-mismi-s3-test.cabal  bench.hs  mismi-s3-test.cabal  mismi-s3-test.lock-7.10.2  mismi-s3-test.submodules  test-io.hs  test-reliability.hs  test.hs
mismi-sqs/: ambiata-mismi-sqs.cabal  ambiata-mismi-sqs.lock-8.0.2  master.toml  mismi-sqs.cabal  mismi-sqs.lock-7.10.2  mismi-sqs.lock-8.0.1  mismi-sqs.submodules
mismi-sqs-core/: ambiata-mismi-sqs-core.cabal  ambiata-mismi-sqs-core.lock-7.10.2  ambiata-mismi-sqs-core.lock-8.0.1  mismi-sqs-core.cabal  mismi-sqs-core.lock-7.10.2  mismi-sqs-core.lock-7.8.4
mismi-sqs-core/test/: ambiata-mismi-sqs-core-test.cabal  mismi-sqs-core-test.cabal
mismi-sqs/src/Mismi/: SQS.hs
mismi-sqs/test/: ambiata-mismi-sqs-test.cabal  mismi-sqs-test.cabal  mismi-sqs-test.lock-7.10.2  mismi-sqs-test.submodules  test-io.hs
test/: mismi-test.cabal  test-cli.hs  test-io.hs  test.hs
test/Mismi/: Arbitrary.hs  Test.hs
test/Mismi/S3/: CommandsTest.hs  DataTest.hs
test/Mismi/Test/: S3.hs
test/Test/: Mismi.hs
test/Test/Mismi/: Arbitrary.hs  S3.hs  SQS.hs
test/cli/core/: runner.sh
test/cli/exit/: run
test/cli/work/: run
(+172 files in other folders)
