name:                  mismi
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi.

library
  build-depends:
                       base                            >= 3          && < 5
                     , p
                     , template-haskell
                     , aws                             == 0.11.*
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , exceptions                      == 0.6.*
                     , http-client                     == 0.4.*
                     , http-conduit                    == 2.1.*
                     , http-types                      == 0.8.*
                     , mtl                             == 2.2.*
                     , process                         == 1.2.*
                     , resourcet                       == 1.1.*
                     , semigroups                      == 0.16.*
                     , syb                             == 0.4.*
                     , text                            == 1.2.*
                     , transformers                    == 0.4.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_mismi
                       Mismi
                       Mismi.Control
                       Mismi.S3.Commands
                       Mismi.S3.Control
                       Mismi.S3.Data
                       Mismi.S3.Data.Component
                       Mismi.S3.Data.Component.QQ


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mismi
                     , aws
                     , bifunctors                      == 4.2.*
                     , exceptions
                     , p
                     , http-client
                     , semigroups                      == 0.16.*
                     , split                           == 0.2.*
                     , text
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
