name:                  ambiata-mismi-cli
version:               0.1.6
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.24
build-type:            Custom
description:           mismi-s3.

custom-setup
  setup-depends:
                       base
                     , Cabal                           < 2.1          && >= 1.24
executable s3
  main-is:             ../main/s3.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      gen
  build-depends:       base                            >= 3          && < 5
                     , ambiata-mismi-core
                     , ambiata-mismi-openssl
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-core
                     , ambiata-p
                     , ambiata-x-optparse
                     , ambiata-x-eithert
                     , bytestring                      == 0.10.*
                     , conduit
                     , containers                      == 0.5.*
                     , exceptions
                     , filepath
                     , lens                            >= 4.8        && < 4.16
                     , optparse-applicative            >= 0.11 && < 0.13
                     , resourcet
                     , text
                     , transformers
                     , unix

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
