name:                  ambiata-mismi-cli
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Custom
description:           mismi-s3.

executable s3
  main-is:             ../main/s3.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      gen
  build-depends:       base                            >= 3          && < 5
                     , exceptions
                     , ambiata-mismi-core
                     , ambiata-mismi-openssl
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-core
                     , ambiata-p
                     , ambiata-x-optparse
                     , ambiata-x-eithert
                     , filepath
                     , optparse-applicative            >= 0.11 && < 0.13
                     , transformers
                     , conduit
                     , unix
                     , text
                     , resourcet
                     , bytestring                      == 0.10.*
                     , lens                            >= 4.8        && < 4.15

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
