name:                  ambiata-mismi-cloudwatch
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-cloudwatch.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-x-eithert
                     , amazonka                        == 1.3.2.1
                     , amazonka-core                   == 1.3.2
                     , amazonka-cloudwatch             == 1.3.2
                     , bytestring                      == 0.10.*
                     , exceptions                      == 0.8.*
                     , http-client                     == 0.4.18.*
                     , http-conduit                    == 2.1.5.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.Cloudwatch
                       Mismi.Cloudwatch.Amazonka

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-mismi-core
                     , ambiata-mismi-cloudwatch
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
