name:                  ambiata-mismi-core
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi.

library
  build-depends:
                       base                            >= 3          && < 5
                     , amazonka                        == 1.3.2
                     , amazonka-core                   == 1.3.2
                     , ambiata-p
                     , ambiata-x-exception
                     , bifunctors                      == 4.2.*
                     , bytestring                      == 0.10.*
                     , either                          == 4.3.*
                     , exceptions                      >= 0.6        && < 0.9
                     , http-client                     == 0.4.18.*
                     , http-conduit                    == 2.1.5.*
                     , http-types                      == 0.8.*
                     , lens                            >= 4.8        && < 4.10
                     , mtl                             >= 2.1        && < 2.3
                     , profunctors                     >= 4          && < 5
                     , resourcet                       == 1.1.*
                     , retry                           == 0.6.*
                     , template-haskell
                     , text                            == 1.2.*
                     , time                            == 1.4.*
                     , transformers                    >= 0.3.1      && < 0.5
                     , semigroups                      == 0.16.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi
                       Mismi.Control
                       Mismi.Environment

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-p
                     , amazonka
                     , amazonka-core
                     , either
                     , exceptions
                     , filepath
                     , directory                       == 1.2.*
                     , http-client
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , uuid                            == 1.3.*
