name:                  ambiata-mismi-core
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi.

library
  build-depends:
                       base                            >= 3          && < 6
                     , amazonka                        >= 1.4        && < 1.6
                     , amazonka-core                   >= 1.4        && < 1.6
                     , ambiata-mismi-kernel
                     , ambiata-p
                     , ambiata-x-eithert
                     , ambiata-x-exception
                     , bifunctors                      >= 4.2        && < 5.3
                     , bytestring                      == 0.10.*

                     , connection                      == 0.2.8

                     , conduit-extra                   >= 1.1.15     && < 1.2
                     , exceptions                      >= 0.6        && < 0.9
                     , ini                             == 0.3.5
                     , http-client                     == 0.5.*
                     , http-types                      == 0.8.*
                     , lens                            >= 4.8        && < 4.16
                     , mtl                             >= 2.1        && < 2.3
                     , profunctors                     >= 4          && < 5.3
                     , resourcet                       == 1.1.*
                     , retry                           == 0.7.*
                     , template-haskell
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.7
                     , transformers                    >= 0.3.1      && < 0.6
                     , semigroups                      >= 0.16       && < 0.19

  ghc-options:
                       -Wall
  if impl(ghc >= 8.0)
    ghc-options:        -fno-warn-redundant-constraints

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi
                       Mismi.Amazonka
                       Mismi.Control
                       Mismi.Data
                       Mismi.Environment

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-kernel
                     , ambiata-mismi-kernel-test
                     , ambiata-p
                     , ambiata-x-eithert
                     , amazonka
                     , amazonka-core
                     , exceptions
                     , filepath
                     , directory                       >= 1.2        && < 1.4
                     , http-client
                     , resourcet                       == 1.1.*
                     , temporary                       == 1.2.*
                     , text
                     , transformers
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
                     , unix                            == 2.7.*
                     , uuid                            == 1.3.*
