name:                  ambiata-mismi-dynamodb
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-dynamodb.

library
  build-depends:
                       base                            >= 3          && < 6
                     , ambiata-p
                     , ambiata-mismi-core
                     , amazonka-dynamodb               >= 1.4.0      && < 1.6
                     , lens                            >= 4.8        && < 4.16

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.DynamoDB.Amazonka
                       Mismi.DynamoDB.Control
