name:                  mismi-ec2
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-ec2.

library
  build-depends:
                       base                            >= 3          && < 5
                     , p
                     , amazonka                        == 99.0.9
                     , amazonka-core                   == 99.0.9
                     , bytestring                      == 0.10.*
                     , either
                     , http-client                     == 0.4.18.*
                     , http-conduit                    == 2.1.5.*
                     , mismi-core
                     , mtl                             >= 2.2.1      && < 2.3
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.EC2
                       Mismi.EC2.Data
                       Mismi.EC2.Metadata

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , disorder-core
                     , mismi-core
                     , mismi-ec2
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
