name:                  ambiata-mismi-ec2
version:               0.0.1
license:               Apache-2.0
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-ec2.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-x-eithert
                     , amazonka                        == 1.3.6
                     , amazonka-core                   == 1.3.6
                     , amazonka-ec2                    == 1.3.6
                     , bytestring                      == 0.10.*
                     , exceptions                      == 0.8.*
                     , http-client                     == 0.4.18.*
                     , http-conduit                    == 2.1.5.*
                     , lens                            >= 4.8        && < 4.14
                     , mtl                             >= 2.2.1      && < 2.3
                     , text                            == 1.2.*
                     , transformers                    >= 0.3.1      && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Mismi.EC2
                       Mismi.EC2.Amazonka
                       Mismi.EC2.Commands
                       Mismi.EC2.Config.Virtualization
                       Mismi.EC2.Data
                       Mismi.EC2.Metadata

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-ec2
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*


test-suite test-io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-core-test
                     , ambiata-mismi-ec2
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
